--- a/app/views/units/index.html.erb
+++ b/app/views/units/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Units#index</h1>
-<p>Find me in app/views/units/index.html.erb</p>
+<h1>Units</h1>
+
+<ul>
+    <% @units.all.each do |unit| %>
+        <li><%= unit.name %></li>
+        <% unit.tanks.each do |tank| %>
+            <ul><%=link_to tank.name, tank_path(tank.id)%></ul>
+        <% end %>
+    <% end %>
+</ul>
