basic views complete

--- a/app/views/crewmembers/index.html.erb
+++ b/app/views/crewmembers/index.html.erb
@@ -1,2 +1,6 @@
 <h1>Crewmembers#index</h1>
 <p>Find me in app/views/crewmembers/index.html.erb</p>
+
+<% @crewmembers.each do |crew| %>
+    <li><%= link_to crew.full_name, crewmember_path(crew.id)%></li>
+<%end%>
