--- a/app/views/tanks/index.html.erb
+++ b/app/views/tanks/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Tanks#index</h1>
-<p>Find me in app/views/tanks/index.html.erb</p>
+<h1>Tanks</h1>
+
+<ul>
+    <% @tanks.each do |tank| %>
+        <li><%= tank.name %> - <%= tank.unit.name %></li>
+        <% tank.crewmembers.each do |crew| %>
+            <ul><%=link_to crew.full_name, crewmember_path(crew.id)%></ul>
+        <% end %>
+    <% end %>
+</ul>
