--- a/app/views/tanks/show.html.erb
+++ b/app/views/tanks/show.html.erb
@@ -6,5 +6,5 @@
 <p> Status: <%= @tank.status_report %> </p>
 
 <% @tank.crewmembers.each do |crew| %>
-    <li><%= link_to crew.name, crewmember_path(crew.id)%></li>
+    <li><%= link_to crew.full_name, crewmember_path(crew.id)%></li>
 <% end %>
